fix: use 4.5:1 contrast for placeholder color and background (#1640)
fixes #412 

extra's: vergroot ook de font-size van de keyboard short cut en de
breedte van de modal.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -944,3 +944,15 @@ pre {
 .utrecht-accordion__header {
   margin: 0;
 }
+
+.DocSearch {
+  --docsearch-muted-color: #757575;
+  --docsearch-modal-width: 50em;
+}
+.DocSearch .DocSearch-Label {
+  font-size: 0.9em;
+  line-height: 1;
+}
+.docs-doc-page ul {
+  margin: auto 0;
+}
